Add script to run some tests/ fix imaze to resize properly

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <title>The Buddha</title>
         <link rel="stylesheet" href="styles.css">
-        <script src="script.js"></script>
     </head>
     <div id="main">
         <body>
@@ -16,7 +15,7 @@
                 <p id="img-caption">He is revered as the founder of the world religion of Buddhism, and recognized by most Buddhist schools as the Enlightened One who is believed to have transcended Karma and escaped the cycle of birth and rebirth.</p>
             </div>
             <section id="tribute-info">
-                <h4>Here is a list of topics proclaimed in <a href=https://www.accesstoinsight.org/tipitaka/kn/dhp/dhp.intro.budd.html target="blank"">The Dhammapadda</a>, along with a random quote selected among the many available: </h4>
+                <h4>Here is a list of topics proclaimed in <a href=https://www.accesstoinsight.org/tipitaka/kn/dhp/dhp.intro.budd.html target="_blank"">The Dhammapadda</a>, along with a random quote selected among the many available: </h4>
                 <ul>
                     <li><strong>I. The Pairs</strong> - Little though he recites the sacred texts, but puts the Teaching into practice, forsaking lust, hatred, and delusion, with true wisdom and emancipated mind, clinging to nothing of this or any other world — he indeed partakes of the blessings of a holy life.</li>
                     <li><strong>Heedfulness</strong> - By effort and heedfulness, discipline and self-mastery, let the wise one make for himself an island which no flood can overwhelm.</li>
@@ -51,6 +50,8 @@
                     <li><strong>XXVI. The Holy Man</strong> -  Nothing is better for a holy man than when he holds his mind back from what is endearing. To the extent the intent to harm wears away, to that extent does suffering subside.</li>
                 </ul>
             </section>
+            <p>You can find a wealth of information <a href="https://www.accesstoinsight.org/index.html" target="_blank" id="tribute-link">here</a> on anything related to the Buddha's teachings.</p>
+            <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
         </body>
     </div>
 </html>
